remove query resolution form wfs
